--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url(//db.onlinewebfonts.com/c/718424dad33f1bd8574f5eae2e58368e?family=CCSlaphappyOpen);
+
 body::-webkit-scrollbar{
     width: 7px;
     background-color: #f33a3b;
