--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 @import url(//db.onlinewebfonts.com/c/718424dad33f1bd8574f5eae2e58368e?family=CCSlaphappyOpen);
+@import url(//db.onlinewebfonts.com/c/0f26b3e18150776f5ced203524ea7573?family=Hanley+Pro+Sans);
 
 body::-webkit-scrollbar{
     width: 7px;
