--- a/Login.css
+++ b/Login.css
@@ -37,34 +37,11 @@ body {
     display: grid;
 }
 
-#login {
-    width: 25vw;
-    height: 75vh;
-    border: 1px solid;
-    border-radius: 5px;
-
-    display: grid;
-    justify-items: center;
-
-}
-
-#login img {
-    max-width: 100%;
-    height: 40vh;
-}
-
-#login h2 {
-    grid-row: 2;
-    font-family: 'HanleyPro-Sans';
-    max-width: 200px;
-    font-size: larger;
-}
-
-#login-caixa {
+fieldset{
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    gap: 2vh;
-    width: 100%;
+    margin-bottom: 5vh !important;
 }
 
 #login input {
